--- a/Lab_255/Lab2/.project
+++ b/Lab_255/Lab2/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Exercise_5_18</name>
+	<name>Lab2</name>
 	<comment></comment>
 	<projects>
 	</projects>
